--- a/style.css
+++ b/style.css
@@ -99,15 +99,15 @@ body.night-mode #tocList button:hover {
 
 #reader {
     border: 1px solid #ccc;
-    padding: 40px;
-    height: 800px; /* Altezza maggiore per simulare più pagine */
+    padding: 20px; /* Ridotto il padding per migliorare l'allineamento */
+    height: 800px;
     overflow-y: scroll;
     margin-top: 20px;
     background-color: #fff;
     position: relative;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    line-height: 1.6;
-    font-size: 1.1em;
+    line-height: 1.5; /* Ridotto per sincronizzare meglio con le righe */
+    font-size: 16px; /* Imposta una dimensione fissa per il font */
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
@@ -116,9 +116,9 @@ body.night-mode #tocList button:hover {
     background: repeating-linear-gradient(
         to bottom,
         #ffffff,
-        #ffffff 25px,
-        #e6e6e6 25px,
-        #e6e6e6 26px
+        #ffffff 24px,
+        #e6e6e6 24px,
+        #e6e6e6 25px
     );
     transition: background 0.3s;
 }
@@ -127,10 +127,16 @@ body.night-mode #reader {
     background: repeating-linear-gradient(
         to bottom,
         #333333,
-        #333333 25px,
-        #555555 25px,
-        #555555 26px
+        #333333 24px,
+        #555555 24px,
+        #555555 25px
     );
+}
+
+.word {
+    /* Assicurarsi che le parole non abbiano margini o padding aggiuntivi */
+    margin: 0;
+    padding: 0;
 }
 
 .highlight {
@@ -138,7 +144,7 @@ body.night-mode #reader {
 }
 
 body.night-mode .highlight {
-    background-color: #ffeb3b; /* Cambia il colore per una migliore visibilità in modalità notte */
+    background-color: #ffeb3b;
 }
 
 /* Spinner per indicare il caricamento */
@@ -156,7 +162,6 @@ body.night-mode #spinner {
     color: #f5f5f5;
 }
 
-/* Stili per le pagine */
 @media print {
     #reader {
         width: 100%;
@@ -164,4 +169,3 @@ body.night-mode #spinner {
         box-shadow: none;
     }
 }
-
