--- a/style.css
+++ b/style.css
@@ -152,4 +152,14 @@ body.night-mode .highlight {
     color: #555;
 }
 
-body.n
+body.night-mode #spinner {
+    color: #f5f5f5;
+}
+
+@media print {
+    #reader {
+        width: 100%;
+        height: auto;
+        box-shadow: none;
+    }
+}
