--- a/style.css
+++ b/style.css
@@ -83,11 +83,11 @@ body.night-mode #reader {
 }
 
 .word.highlight {
-    background-color: yellow;
+    background-color: #fff9c4; /* Giallo pastello */
 }
 
 body.night-mode .word.highlight {
-    background-color: #ffeb3b;
+    background-color: #fff59d; /* Giallo pastello leggermente più scuro per la modalità notte */
 }
 
 #spinner {
@@ -124,11 +124,11 @@ body.night-mode #controls {
 }
 
 #controls input[type="file"] {
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
 #controls label {
-    margin: 0 10px;
+    margin: 0 5px;
     font-weight: bold;
 }
 
@@ -159,3 +159,16 @@ body.night-mode #controls button {
     text-align: center;
 }
 
+#tocSelect {
+    padding: 6px;
+    margin: 0 10px;
+    font-size: 1em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+body.night-mode #tocSelect {
+    background-color: #616161;
+    color: #f5f5f5;
+    border: 1px solid #888;
+}
